[gd_scene load_steps=5 format=3 uid="uid://bynaee88w7bws"]

[ext_resource type="Script" uid="uid://1xyuqc2q8vuw" path="res://Elena/Scripts/dissapearing_platform.gd" id="1_3hy82"]
[ext_resource type="Texture2D" uid="uid://nycislmjusp8" path="res://Resources/tilesheet_complete.png" id="1_euxbr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0qere"]
size = Vector2(128, 65)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_flctw"]
size = Vector2(126, 20)

[node name="DissapearingPlatform" type="StaticBody2D" groups=["Ground"]]
scale = Vector2(1.5, 1.5)
collision_layer = 2049
script = ExtResource("1_3hy82")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_euxbr")
region_enabled = true
region_rect = Rect2(320, 128, 128, 64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 1.5)
shape = SubResource("RectangleShape2D_0qere")

[node name="TriggerArea" type="Area2D" parent="."]
collision_layer = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerArea"]
position = Vector2(0, -33)
shape = SubResource("RectangleShape2D_flctw")

[node name="VanishingTimer" type="Timer" parent="."]

[connection signal="body_entered" from="TriggerArea" to="." method="_on_trigger_area_body_entered"]
[connection signal="timeout" from="VanishingTimer" to="." method="_on_timer_timeout"]
